--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,7 @@ ModuleImport("dmmsgpack" "thirdparty/dmmsgpack")
 PyModuleImport("module" "dmtest;pybind11::module;${PYTHON_LIBRARIES}")
 
 ExeImport("test" "dmtest;pymsgpack;pybind11::module;${PYTHON_LIBRARIES}")
+ExeImport("tools" "dmtest;pymsgpack;pybind11::module;${PYTHON_LIBRARIES}")
 
 ADD_CUSTOM_COMMAND(
     TARGET pymsgpack
