--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,7 @@ ADD_CUSTOM_COMMAND(
     PRE_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_if_different
     ${CMAKE_CURRENT_SOURCE_DIR}/module/pymsgpack/pymsgpack.py
-    ${CMAKE_CURRENT_SOURCE_DIR}/file/pymsgpack/creature_attr_def.py.bin
+    ${CMAKE_CURRENT_SOURCE_DIR}/file/creature_attr_def.py.bin  
+    ${CMAKE_CURRENT_SOURCE_DIR}/file/model.py.bin  
     $<TARGET_FILE_DIR:pymsgpack>
 )
